# canarygan

./: README.md  pyproject.toml  requirements.txt
lightning_logs/version_0/: events.out.tfevents.1717504104.P-E7-NTrouvain.13167.2
lightning_logs/version_1/: events.out.tfevents.1717504651.P-E7-NTrouvain.15117.2
lightning_logs/version_2/: events.out.tfevents.1717504746.P-E7-NTrouvain.15366.2
lightning_logs/version_3/: events.out.tfevents.1717504771.P-E7-NTrouvain.15599.2
lightning_logs/version_4/: events.out.tfevents.1717504814.P-E7-NTrouvain.15829.2
notebooks/: 00-Tests.ipynb  01-Inspect-Inception-model.ipynb  02-Inspect-generated-syllables.ipynb  03-GAN-evaluation.ipynb  04-Inverse-model.ipynb  05-Inverse-model-with-stop.ipynb  06-UMAP.ipynb  07-Check-normalization.ipynb  08-Create_new_early.ipynb  10-Optuna.ipynb  Untitled.ipynb  load.ipynb
old/: __main__.py  _test_lightning.py  _test_losses.py  discriminator.py  generate.py  generator.py  score.py
scripts/: compute_decoder_scores.py  compute_inception.py  decode.py  generate.py  generate_sounds.py  inverse.py  make_decoder_dataset.py  make_z.py  optimize_decoder.py  train_decoder.py  train_gan.py  train_inception.py  train_inverse.py
slurm/: create_reservoirs  decode  decoderscore  generate  inceptionscore  inverse  norm  optim  optim_ridge  probegpu  probegpu.py  traindecoder  traindecoder_classic  traingan  traingan-dry  traingan-resume  traininception  traininception-dry  umap
src/canarygan/: __main__.py  dataset.py  generate.py  (+2 more)
tests/: conftest.py  test_inception.py  test_losses.py  test_train.py
(+44 files in other folders)
